# astro-database

./: Group_67_DDL.sql  Group_67_DML.sql  README.md  pyproject.toml  static_config.py
main/: __init__.py  forms.py
queries/: night_logs_observers.py  observers.py
templates/: base.html  index.html  night_log_entries.html  night_log_entries_update.html  night_logs.html  night_logs_observers_update.html  observers.html
web_app/: __init__.py
web_app/main/: routes.py
web_app/queries/: night_log_entries.py  night_logs.py  observation_sites.py  targets.py
web_app/templates/: night_logs_observers.html  night_logs_update.html  observation_sites.html  observation_sites_update.html  observers_update.html  targets.html  targets_update.html
