[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AstroDB"
authors = [
    {name = "Andrew Neugarten", email = "neugarta@oregonstate.edu"},
    {name = "Katherine Worms", email = "wormsk@oregonstate.edu"}
]
version="0.0.1"
description = "A Flask web application to interface with an astronomical observational log database."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["flask", "astronomy", "telescope", "instrument", "interface"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "flask",
    "Flask-WTF",
    "Flask-MySQLdb",
    "gunicorn"
    ]
dynamic = []

[tool.setuptools]
zip-safe = false
include-package-data = false
packages = ["web_app"]
